[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["frnsimoes <simoes.grcia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipdb = "^0.13.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
